# ffmpeg_opengl_rendering

./: CMakeLists.txt  README.md
Mac/: CMakeLists.txt  main.cpp
Mac/src/: MyGLWidget.cpp  MyGLWidget.h  VideoDecoder.cpp
Win/: FFVideoReader.hpp  Project1.sln  main.cpp
Win/Debug/: Project1.ilk
Win/Project1/: CELLShader.h  FFVideoReader.h  GLContext.h  Project1.vcxproj  Project1.vcxproj.filters  Thread.h  Timestamp.h  main.cpp
Win/Project1/Debug/: Project1.exe.recipe  vc142.idb
Win/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Win/Project1/x64/Debug/: vc142.idb
Win/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate
Win/ffmpeg-opengl/: cuc_ieschool.info  cuc_ieschool_512x288.H264  ffmpeg-opengl.cpp  ffmpeg-opengl.sln  ffmpeg-opengl.vcxproj  ffmpeg-opengl.vcxproj.filters
Win/ffmpeg-opengl/Debug/: ffmpeg-opengl.exe.recipe  ffmpeg-opengl.ilk  ffmpeg-opengl.vcxproj.FileListAbsolute.txt  vc142.idb
Win/ffmpeg-opengl/Debug/ffmpeg-opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ffmpeg-opengl.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: VideoDecoder.h
